Fix profile repos list on Safari

--- a/app/styles/app/layouts/profile.sass
+++ b/app/styles/app/layouts/profile.sass
@@ -145,10 +145,10 @@ p.profile-user-last
         content: ""
         @include fadeOut(right, -90deg, $agate-blue)
   @media #{$medium-up}
-    width: grid-calc(18, 24)
+    width: grid-calc(17, 24)
     height: 30px
   @media #{$large-up}
-    width: grid-calc(19, 24)
+    width: grid-calc(18, 24)
 
 
 .profile-additional
